WIP: Correctly compute SVGForeignObject bounding client rect

Bug: 741615
Change-Id: Ibec65966e8661c4c2390284708ef53b5d0c1d11a